--- a/HairSalon/Views/Clients/Create.cshtml
+++ b/HairSalon/Views/Clients/Create.cshtml
@@ -7,6 +7,9 @@
 <h4>Add a new Client</h4>
 @using (Html.BeginForm())
 {
+    @Html.LabelFor(model => model.Name)
+    @Html.TextBoxFor(model => model.Name)
+
     @Html.LabelFor(model => model.Description)
     @Html.TextBoxFor(model => model.Description)
 
